tests/e2e/semantics/list_nested3.story
a = [1, 2]
b = [a, a]
c = {"foo": b}
d = [c, c]
e = d + 1
